swagger issue resolved
