# pkg/utils/models/order.go
@@ -1,10 +1,18 @@
 package models
 
+type OrderFromCart struct {
+	PaymentID uint `json:"payment_id"`
+	AddressID uint `json:"address_id"`
+}
+
+
 type OrderIncoming struct {
 	UserID    uint `json:"user_id"`
 	PaymentID uint `json:"payment_id"`
 	AddressID uint `json:"address_id"`
 }
+
+
 
 type OrderSuccessResponse struct {
 	OrderID        string `json:"order_id"`
